# funding_finder

./: .gitignore  README.md  pyproject.toml
config/: ai_params.json  ai_prompts.json
src/: funding_source.py
src/fundscrape/: ai_assessor.py  funding_source.py  funding_sources.py  json_handler.py  main.py  nihr_detail_page.py  nihr_funding_card.py  nihr_scraper.py
tests/: test_ai_assessor.py  test_deepseek_ai.py  test_nav.py  test_page_detail_parse.py
tests/test_data/: detail_page0.html  detail_page1.html  detail_page2.html
